--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.2.5",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
@@ -20,6 +24,7 @@
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
     "redux-thunk": "^2.4.2",
+    "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
